<resources>
    <string name="app_name">UzhNU.InTime</string>
    <string name="title_activity_email_password_activity">Реєстрація</string>

    <string name="activity_title_home">Нотатки</string>
    <string name="msg_no_notes">Не знайдено!</string>
    <string name="lbl_new_note_title">Нова</string>
    <string name="lbl_edit_note_title">Редагувати</string>
    <string name="hint_enter_note">Введіть нотатку</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_teacherpage">teacherpage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_teacher_page">teacher_page</string>
    <string name="title_activity_teacher_bar">teacher_bar</string>
    <string name="exit">Вихід</string>
    <string name="help">Допомога</string>
    <string name="shedule">Розклад дзвінків</string>
    <string name="notes">Нотатки</string>
    <string name="tools">Налаштування</string>
    <string name="teacher_uzhnu">Викладач УжНУ</string>
    <string name="async_error">Error</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="subject">subject</string>
    <string name="room">room</string>
    <string name="teacher">Group</string>
    <string name="choose_time">choose_time</string>
    <string name="subject_dialog">subject_dialog</string>
    <string name="select_time">select_time</string>
    <string name="time_to_dialog">time_to_dialog</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="select_color">select_color</string>
    <string name="time_from_dialog">time_from_dialog</string>
    <string name="room_dialog">room_dialog</string>
    <string name="teacher_dialog">teacher_dialog</string>
    <string name="time">time</string>
    <string name="edit_subject">edit_subject</string>
    <string name="add_subject">add_subject</string>
    <string name="field_error">field_error</string>
    <string name="selected">selected</string>
    <string name="delete">delete</string>


</resources>
