<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar"
            android:title="Розклад занять" />
        <item
            android:id="@+id/nav_teaching"
            android:icon="@drawable/teaching"
            android:title="Облік педнавантаження" />
        <item
            android:id="@+id/nav_shedule"
            android:icon="@drawable/call"
            android:title="@string/shedule" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/note"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/settings"
            android:title="@string/tools" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/logout"
            android:title="@string/exit" />
    </group>



</menu>
